# ficai-signals-website

./: .gitignore  Cargo.toml  Makefile  README.md  template.env
frontend/: main.less  main.ts
src/: api.rs  main.rs  template.rs
templates/: 404.html  base.html  base_flashable.html  index.html
templates/fics/: index.html  template.html
templates/fragments/: fics.html  login.html  tags.html  you.html
