[package]
name = "ficai_website"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { "version" = "0.5.0-rc.1", "features" = ["json", "secrets"] }
serde = "1.0.136"
serde_json = "1.0.78"
reqwest = { "version" = "0.11.9", "features" = ["json", "cookies"] }
askama = "0.11.0"
dotenv = "0.15.0"

